--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -11,12 +11,12 @@
 .button-default {
     border: none;
     background-color: var(--button-default-bg-color);
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     transition: all 0.4s;
 }
 
 .button-default:hover {
     transition: all 0.4s;
-    background-color: var(--secondary-text-color);
-    color: #FEFEFE;
+    background-color: var(--button-default-bg-hover-color);
+    color: var(--secondary-text-color);
 }
