--- a/styles/containers.css
+++ b/styles/containers.css
@@ -10,3 +10,9 @@
     flex-direction: row;
     gap: 15px;
 }
+
+@media screen and (max-width: 600px){
+    .centered-container {
+        width: auto;
+    }
+}
