--- a/styles/cards.css
+++ b/styles/cards.css
@@ -19,7 +19,7 @@
 
 .card-image img{
     width: 100%;
-    height: 280px;
+    height: 300px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; 
@@ -65,5 +65,9 @@ i:hover {
     }
     .card {
         width: auto;
+        margin: 10px;
+    }
+    .output-title {
+        text-align: center;
     }
 }
