Form styling fo iOS

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,3 +51,12 @@ a {
 .output-title {
     color: var(--primary-text-color);
 }
+
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+-webkit-appearance: none;
+} 
