--- a/styles/borders.css
+++ b/styles/borders.css
@@ -7,3 +7,15 @@
 .border-15 {
     border-radius: 15px;
 }
+.border-20 {
+    border-radius: 20px;
+}
+.border-25 {
+    border-radius: 25px;
+}
+.border-30 {
+    border-radius: 30px;
+}
+.border-35 {
+    border-radius: 35px;
+}
