Mobile menu bug fix

--- a/styles/form.css
+++ b/styles/form.css
@@ -77,4 +77,5 @@ input[type="checkbox"] {
         -webkit-appearance: listbox !important;
         color: var(--primary-text-color);
     }
+    select::-ms-expand { display: block; }
 }
