--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -10,13 +10,13 @@
 
 .button-default {
     border: none;
-    background-color: var(--button-default-bg-color);
+    background-color: var(--button-default-bg-color) !important;
     color: var(--secondary-text-color);
     transition: all 0.4s;
 }
 
 .button-default:hover {
     transition: all 0.4s;
-    background-color: var(--button-default-bg-hover-color);
+    background-color: var(--button-default-bg-hover-color) !important;
     color: var(--secondary-text-color);
 }
