--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 50px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -16,3 +16,10 @@ a {
 }
 
 @import './style.css';
+
+@media screen and (max-width: 600px){
+  html,body {
+    margin: 0;
+    padding: 0;
+  }
+}
