Global styling with chakra UI

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -2,7 +2,7 @@
     --bg-color: #F4E9DC;
     --element-bg-color: #494949;
     --primary-text-color: #494949;
-    --secondary-text-color: #F4E9DC;
+    --secondary-text-color: #805AD5;
     --button-default-bg-color: #E85E56;
     --button-default-bg-hover-color: #d0443d;
     --button-default-text-color: #F4E9DC;
