--- a/styles/form.css
+++ b/styles/form.css
@@ -75,7 +75,7 @@ input[type="checkbox"] {
     .input {
         color: var(--primary-text-color);
     }
-    .chakra-heading.css-tpjzpj {
+    .chakra-heading.css-1kqodg8 {
         font-size: 26px;
         margin: 30px 0;
     }
