--- a/styles/form.css
+++ b/styles/form.css
@@ -75,8 +75,8 @@ input[type="checkbox"] {
     .input {
         color: var(--primary-text-color);
     }
-    .chakra-heading.css-1kqodg8 {
-        font-size: 26px;
-        margin: 30px 0;
+    .form-title {
+        font-size: 26px !important;
+        margin: 30px 0 !important;
     }
 }
