--- a/styles/cards.css
+++ b/styles/cards.css
@@ -15,15 +15,14 @@
     color: var(--secondary-text-color);
 }
 
-
-
 .card-image img{
     width: 100%;
     height: 300px;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat; 
 }
+
 
 .card-body {
     width: 100%;
