--- a/styles/containers.css
+++ b/styles/containers.css
@@ -11,8 +11,31 @@
     gap: 15px;
 }
 
+.cards-wrapper {
+    background-color: rgb(255, 255, 255);
+    padding-top: 80px;
+    padding-bottom: 80px;
+    border-radius: 10px;
+}
+
+.cards-wrapper-title {
+    background-color: #E9D8FD;
+    width: fit-content;
+    padding: 0;
+    margin: 30px auto;
+    border-radius: 10px;
+}
+
 @media screen and (max-width: 600px){
     .centered-container {
         width: 100%;
+    }
+    .cards-wrapper {
+        padding: 0;
+        margin: 0;
+    }
+    .cards-wrapper-title{
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
